add style for sticker, payments, guarantees and vacancies

--- a/index.html
+++ b/index.html
@@ -172,129 +172,139 @@
 			<button class="sticker__cta btn btn--dark">Узнать условия для меня</button>
 		</section>
 		<section class="payments">
-			<h2 class="payments__title">Выплаты и соц гарантии при заключении контракта</h2>
-			<div class="payments__content">
-				<div class="payments__content-header">
-					<div class="payments__header-category">
-						<button class="payments__category-button btn btn--primary">Выплаты</button>
-						<button class="payments__category-button btn btn--outlined">За ранения и увечья</button>
-						<button class="payments__category-button btn btn--outlined">Семьям и родственникам</button>
-						<button class="payments__category-button btn btn--outlined">Доп. выплаты</button>
+			<div class="payments__container">
+				<h2 class="payments__title">Выплаты и соц гарантии при заключении контракта</h2>
+				<div class="payments__content">
+					<div class="payments__content-header">
+						<div class="payments__header-category">
+							<button class="payments__category-button btn btn--primary">Выплаты</button>
+							<button class="payments__category-button btn btn--outlined">За ранения и увечья</button>
+							<button class="payments__category-button btn btn--outlined">Семьям и родственникам</button>
+							<button class="payments__category-button btn btn--outlined">Доп. выплаты</button>
+						</div>
+						<div class="payments__header-city">
+							<button class="payments__city-toggle btn btn--outlined">
+								<div class="payments__city-content">
+									<h6 class="payments__city-title">Ваш регион</h6>
+									<span class="payments__city-text">Москва</span>
+								</div>
+								<img src="./image/payments/chevron-down.svg" alt="Ваш регион" class="payments__city-arrow">
+							</button>
+						</div>
 					</div>
-					<div class="payments__header-city">
-						<button class="payments__city-toggle">
-							<div class="payments__city-content">
-								<h6 class="payments__city-title">Ваш регион</h6>
-								<span class="payments__city-text">Москва</span>
-							</div>
-							<img src="./image/payments/chevron-down.svg" alt="Ваш регион" class="payments__city-arrow">
-						</button>
+					<ul class="payments__list">
+						<li class="payments__list-item">
+							<h3 class="payments__item-value">до 4 200 000 ₽</h3>
+							<p class="payments__item-text">Региональные</p>
+						</li>
+						<li class="payments__list-item">
+							<h3 class="payments__item-value">400 000 ₽</h3>
+							<p class="payments__item-text">Единовременная выплата от МО РФ независимо от региона</p>
+						</li>
+						<li class="payments__list-item">
+							<h3 class="payments__item-value">до 10 000 000 ₽</h3>
+							<p class="payments__item-text">Списание долгов</p>
+						</li>
+						<li class="payments__list-item">
+							<h3 class="payments__item-value">от 210 000 ₽</h3>
+							<p class="payments__item-text">Ежемесячное денежное довольствие</p>
+						</li>
+						<li class="payments__list-item">
+							<h3 class="payments__item-value">4 582 ₽</h3>
+							<p class="payments__item-text">Ежемесячная выплата ветеранам боевых действий</p>
+						</li>
+					</ul>
+					<div class="payments__note">
+						<span class="payments__note-text">Приведено в соответствии с действующими нормативными актами. Условия и
+							размеры выплат могут изменяться</span>
 					</div>
-				</div>
-				<ul class="payments__list">
-					<li class="payments__list-item">
-						<h3 class="payments__item-value">до 4 200 000 ₽</h3>
-						<p class="payments__item-text">Региональные</p>
-					</li>
-					<li class="payments__list-item">
-						<h3 class="payments__item-value">400 000 ₽</h3>
-						<p class="payments__item-text">Единовременная выплата от МО РФ независимо от региона</p>
-					</li>
-					<li class="payments__list-item">
-						<h3 class="payments__item-value">до 10 000 000 ₽</h3>
-						<p class="payments__item-text">Списание долгов</p>
-					</li>
-					<li class="payments__list-item">
-						<h3 class="payments__item-value">от 210 000 ₽</h3>
-						<p class="payments__item-text">Ежемесячное денежное довольствие</p>
-					</li>
-					<li class="payments__list-item">
-						<h3 class="payments__item-value">4 582 ₽</h3>
-						<p class="payments__item-text">Ежемесячная выплата ветеранам боевых действий</p>
-					</li>
-				</ul>
-				<div class="payments__note">
-					<span class="payments__note-text">Приведено в соответствии с действующими нормативными актами. Условия и
-						размеры выплат могут изменяться</span>
 				</div>
 			</div>
+			<img src="./image/payments/Subtract.png" alt="substract" class="payments__substract">
 		</section>
 		<section class="guarantees">
-			<div class="guarantees__soldier">
-				<img src="./image/guarantees/soldier.webp" alt="военнослужащий" class="guarantees__soldier-img">
-				<ul class="guarantees__soldier-list">
-					<li class="guarantees__soldier-item">
-						<p class="guarantees__soldier-text">Ежемесячное денежное довольствие</p>
-						<span class="guarantees__soldier-note">оклад + надбавки за выслугу, звание, условия службы</span>
-					</li>
-					<li class="guarantees__soldier-item">
-						<p class="guarantees__soldier-text">Единовременные и дополнительные выплаты при заключении контракта и
-							выполнении условий службы</p>
-					</li>
-					<li class="guarantees__soldier-item">
-						<p class="guarantees__soldier-text">Бесплатное медицинское обслуживание в военных медицинских учреждениях
-						</p>
-					</li>
-					<li class="guarantees__soldier-item">
-						<p class="guarantees__soldier-text">Обязательное государственное страхование жизни и здоровья</p>
-					</li>
-					<li class="guarantees__soldier-item">
-						<p class="guarantees__soldier-text">Оплачиваемый ежегодный отпуск</p>
-						<span class="guarantees__soldier-note">*дополнительные дни за выслугу лет</span>
-					</li>
-					<li class="guarantees__soldier-item">
-						<p class="guarantees__soldier-text">Обеспечение формой, экипировкой и питанием</p>
-					</li>
-					<li class="guarantees__soldier-item">
-						<p class="guarantees__soldier-text">Жилищные гарантии</p>
-						<span class="guarantees__soldier-note">служебное жильё или компенсации аренды, участие в
-							накопительно-ипотечной системе</span>
-					</li>
-					<li class="guarantees__soldier-item">
-						<p class="guarantees__soldier-text">Пенсионное обеспечение по линии Минобороны</p>
-						<span class="guarantees__soldier-note">льготный стаж, досрочная пенсия</span>
-					</li>
-					<li class="guarantees__soldier-item">
-						<p class="guarantees__soldier-text">Обучение и повышение квалификации за счёт государства</p>
-					</li>
-					<li class="guarantees__soldier-item">
-						<p class="guarantees__soldier-text">Юридическая и правовая защита в рамках прохождения службы</p>
-					</li>
-				</ul>
-			</div>
-			<div class="guarantees__family">
-				<img src="./image/guarantees/family.webp" alt="семья военнослужащего" class="guarantees__family-img">
-				<ul class="guarantees__family-list">
-					<li class="guarantees__family-item">
-						<p class="guarantees__family-text">Выплаты и компенсации семье в случаях, предусмотренных законодательством
-						</p>
-					</li>
-					<li class="guarantees__family-item">
-						<p class="guarantees__family-text">Медицинское обслуживание членов семьи в установленных медицинских
-							учреждениях</p>
-					</li>
-					<li class="guarantees__family-item">
-						<p class="guarantees__family-text">Обеспечение жильём или компенсация аренды с учётом состава семьи</p>
-					</li>
-					<li class="guarantees__family-item">
-						<p class="guarantees__family-text">Льготы на образование детей</p>
-						<span class="guarantees__family-note">Детские сады, школы, при поступлении – приоритеты и компенсации</span>
-					</li>
-					<li class="guarantees__family-item">
-						<p class="guarantees__family-text">Социальная поддержка супруги при переезде к месту службы</p>
-					</li>
-					<li class="guarantees__family-item">
-						<p class="guarantees__family-text">Пособия и выплаты детм в соответствии с федеральными и региональными
-							программами</p>
-					</li>
-					<li class="guarantees__family-item">
-						<p class="guarantees__family-text">Право на сохранение социальных льгот при перевода контрактника в другой
-							регион</p>
-					</li>
-					<li class="guarantees__family-item">
-						<p class="guarantees__family-text">Гарантированные выплаты семье при наступлении страховых случаев</p>
-					</li>
-				</ul>
+			<h2 class="guarantees__title">СОЦ гарантии</h2>
+			<div class="guarantees__container">
+				<div class="guarantees__block">
+					<img src="./image/guarantees/soldier.webp" alt="военнослужащий" class="guarantees__block-img">
+					<h4 class="guarantees__list-title">Военнослужащему</h4>
+					<ul class="guarantees__list">
+						<li class="guarantees__list-item">
+							<p class="guarantees__list-text">Ежемесячное денежное довольствие</p>
+							<span class="guarantees__list-note">оклад + надбавки за выслугу, звание, условия службы</span>
+						</li>
+						<li class="guarantees__list-item">
+							<p class="guarantees__list-text">Единовременные и дополнительные выплаты при заключении контракта и
+								выполнении условий службы</p>
+						</li>
+						<li class="guarantees__list-item">
+							<p class="guarantees__list-text">Бесплатное медицинское обслуживание в военных медицинских учреждениях
+							</p>
+						</li>
+						<li class="guarantees__list-item">
+							<p class="guarantees__list-text">Обязательное государственное страхование жизни и здоровья</p>
+						</li>
+						<li class="guarantees__list-item">
+							<p class="guarantees__list-text">Оплачиваемый ежегодный отпуск</p>
+							<span class="guarantees__list-note">*дополнительные дни за выслугу лет</span>
+						</li>
+						<li class="guarantees__list-item">
+							<p class="guarantees__list-text">Обеспечение формой, экипировкой и питанием</p>
+						</li>
+						<li class="guarantees__list-item">
+							<p class="guarantees__list-text">Жилищные гарантии</p>
+							<span class="guarantees__list-note">служебное жильё или компенсации аренды, участие в
+								накопительно-ипотечной системе</span>
+						</li>
+						<li class="guarantees__list-item">
+							<p class="guarantees__list-text">Пенсионное обеспечение по линии Минобороны</p>
+							<span class="guarantees__list-note">льготный стаж, досрочная пенсия</span>
+						</li>
+						<li class="guarantees__list-item">
+							<p class="guarantees__list-text">Обучение и повышение квалификации за счёт государства</p>
+						</li>
+						<li class="guarantees__list-item">
+							<p class="guarantees__list-text">Юридическая и правовая защита в рамках прохождения службы</p>
+						</li>
+					</ul>
+				</div>
+				<div class="guarantees__block">
+					<img src="./image/guarantees/family.webp" alt="семья военнослужащего" class="guarantees__block-img">
+					<h4 class="guarantees__list-title">Семье военнослужащего</h4>
+					<ul class="guarantees__list">
+						<li class="guarantees__list-item">
+							<p class="guarantees__list-text">Выплаты и компенсации семье в случаях, предусмотренных
+								законодательством
+							</p>
+						</li>
+						<li class="guarantees__list-item">
+							<p class="guarantees__list-text">Медицинское обслуживание членов семьи в установленных медицинских
+								учреждениях</p>
+						</li>
+						<li class="guarantees__list-item">
+							<p class="guarantees__list-text">Обеспечение жильём или компенсация аренды с учётом состава семьи</p>
+						</li>
+						<li class="guarantees__list-item">
+							<p class="guarantees__list-text">Льготы на образование детей</p>
+							<span class="guarantees__list-note">Детские сады, школы, при поступлении – приоритеты и
+								компенсации</span>
+						</li>
+						<li class="guarantees__list-item">
+							<p class="guarantees__list-text">Социальная поддержка супруги при переезде к месту службы</p>
+						</li>
+						<li class="guarantees__list-item">
+							<p class="guarantees__list-text">Пособия и выплаты детм в соответствии с федеральными и региональными
+								программами</p>
+						</li>
+						<li class="guarantees__list-item">
+							<p class="guarantees__list-text">Право на сохранение социальных льгот при перевода контрактника в другой
+								регион</p>
+						</li>
+						<li class="guarantees__list-item">
+							<p class="guarantees__list-text">Гарантированные выплаты семье при наступлении страховых случаев</p>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</section>
 		<section class="vacancies">
@@ -309,8 +319,9 @@
 						<li class="vacancies__list-item">Батарея птур</li>
 						<li class="vacancies__list-item">Реактивная артиллерийская батарея (грады)</li>
 						<li class="vacancies__list-item">Зенитная артиллерийская батарея</li>
-						<li class="vacancies__list-item">Разведывательная рота</li>
-						<img src="./image/vacancies/Star.svg" alt="" class="vacancies__item-star">
+						<li class="vacancies__list-item">Разведывательная рота
+							<img src="./image/vacancies/Star.svg" alt="" class="vacancies__item-star">
+						</li>
 						<li class="vacancies__list-item">Ремонтная рота</li>
 						<li class="vacancies__list-item">Инженерная сапёрная рота</li>
 						<li class="vacancies__list-item">Рота управления</li>
@@ -331,25 +342,25 @@
 					<h3 class="vacancies__content-title">Оставить заявку</h3>
 					<p class="vacancies__content-text">Мы объясняем условия до подписания, консультируем и остаёмся на связи</p>
 					<div class="vacancies__user-choice">
-						<div class="vacancies__subdivision">
-							<h6 class="vacancies__subdivision-title">Подразделение</h6>
-							<p class="vacancies__subdivision-text">Батарея птур</p>
+						<div class="vacancies__user-choice--item">
+							<h6 class="vacancies__user-choice--title">Подразделение</h6>
+							<p class="vacancies__user-choice--text">Батарея птур</p>
 						</div>
-						<div class="vacancies__position">
-							<h6 class="vacancies__position-title">Должность</h6>
-							<p class="vacancies__position-text">Командир отделения</p>
+						<div class="vacancies__user-choice--item">
+							<h6 class="vacancies__user-choice--title">Должность</h6>
+							<p class="vacancies__user-choice--text">Командир отделения</p>
 						</div>
 					</div>
 					<form action="" class="vacancies__request">
 						<div class="request__field">
 							<label for="phone">Номер телефона</label>
-							<input type="tel" name="phone" id="phone" placeholder="Номер телефона" class="request__input">
+							<input type="tel" name="phone" id="phone" placeholder="+7 911 123-44-67" class="request__input">
 						</div>
 						<div class="request__field">
 							<label for="name">ФИО</label>
-							<input type="text" name="name" id="name" placeholder="ФИО" class="request__input">
+							<input type="text" name="name" id="name" placeholder="Иванов Иван Иванович" class="request__input">
 						</div>
-						<button class="request__submit" type="submit">Хочу служить</button>
+						<button class="request__submit btn btn--dark" type="submit">Хочу служить</button>
 					</form>
 					<div class="vacancies__pd">
 						<input class="vacancies__pd-checkbox" name="pd-checkbox" id="pd-checkbox" type="checkbox">
