add style for requirements

--- a/index.html
+++ b/index.html
@@ -374,51 +374,50 @@
 			<div class="requirements__content">
 				<div class="requirements__block">
 					<h4 class="requirements__block-title">Возраст от 18 до 50 лет</h4>
-					<div class="requirements__block-content">
+					<div class="requirements__block-img-container">
 						<img src="./image/requirements/user.svg" alt="" class="requirements__block-img">
 					</div>
 				</div>
 				<div class="requirements__block">
 					<h4 class="requirements__block-title">Не состоите на учёте у психиатра</h4>
-					<div class="requirements__block-content">
-						<img src="./image/requirements/healt.svg" alt="" class="requirements__block-img">
+					<div class="requirements__block-img-container">
+						<img src="./image/requirements/health.svg" alt="" class="requirements__block-img">
 					</div>
 				</div>
 				<div class="requirements__block">
 					<h4 class="requirements__block-title">Отсутствие непогашенной судимости</h4>
-					<div class="requirements__block-content">
+					<div class="requirements__block-img-container">
 						<img src="./image/requirements/auction.svg" alt="" class="requirements__block-img">
 					</div>
 				</div>
 				<div class="requirements__block">
 					<h4 class="requirements__block-title">Отсутствие медицинских противопоказаний</h4>
 					<p class="requirements__block-text">В соответствии с требованиями к прохождению контрактной службы таких как
-						-инвалидность I, II группы, злокачественные опухоли, туберкулез, ВИЧ, СПИД, сахарный диабет,
-						эпилепсия,гипертония, астма и т.д.</p>
+						- инвалидность I, II группы, злокачественные опухоли, туберкулез, ВИЧ, СПИД, сахарный диабет,
+						эпилепсия, гипертония, астма и т.д.</p>
 				</div>
 				<div class="requirements__block">
 					<div class="requirements__conditions">
 						<h4 class="requirements__block-title">Условия прохождения службы</h4>
-						<div class="requirements__block-content">
-							<ul class="requirements__conditions-list">
-								<li class="requirements__conditions-item">Контракт заключается от 1 года до 5 лет</li>
-								<li class="requirements__conditions-item">Бесплатный трансфер до воинской части по ВПД –
-									воинскийперевозочный документ</li>
-								<li class="requirements__conditions-item">Медицинская комиссия на сборном пункет</li>
-								<li class="requirements__conditions-item">Оснащение современной экипировкой</li>
-								<li class="requirements__conditions-item">Обучение на различные воинские должности опытнымиинструкторами
-									с боевым опытом</li>
-								<li class="requirements__conditions-item">Оформление удостоверения ветерана боевых действий</li>
-								<li class="requirements__conditions-item">Государственные награды за отличие в боевых действиях</li>
-								<li class="requirements__conditions-item">Стабильное предоставление отпусков каждые 6 месяцев</li>
-							</ul>
-						</div>
+						<ul class="requirements__conditions-list">
+							<li class="requirements__conditions-item">Контракт заключается от 1 года до 5 лет</li>
+							<li class="requirements__conditions-item">Бесплатный трансфер до воинской части по ВПД – воинский
+								перевозочный документ</li>
+							<li class="requirements__conditions-item">Медицинская комиссия на сборном пункте</li>
+							<li class="requirements__conditions-item">Оснащение современной экипировкой</li>
+							<li class="requirements__conditions-item">Обучение на различные воинские должности опытными
+								инструкторами с боевым опытом</li>
+							<li class="requirements__conditions-item">Оформление удостоверения ветерана боевых действий</li>
+							<li class="requirements__conditions-item">Государственные награды за отличие в боевых действиях</li>
+							<li class="requirements__conditions-item">Стабильное предоставление отпусков каждые 6 месяцев</li>
+						</ul>
 					</div>
 					<img src="./image/requirements/flag.png" alt="" class="requirements__conditions-img">
 				</div>
 			</div>
 		</section>
 		<section class="training">
+			<img src="./image/training/Subtract.png" alt="" class="training__substract">
 			<div class="training__header">
 				<h2 class="training__title">Как проходит обучение после прибытия в часть</h2>
 				<div class="training__sticker">
